@@ -42,18 +42,6 @@ using System.Security;
 #if !CF
 [assembly: AllowPartiallyTrustedCallers()]
 #endif
-//
-// Version information for an assembly consists of the following four values:
-//
-//      Major Version
-//      Minor Version 
-//      Build Number
-//      Revision
-//
-// You can specify all the values or you can default the Revision and Build Numbers 
-// by using the '*' as shown below:
-
-[assembly: AssemblyVersion("5.2.7")]
 
 //
 // In order to sign your assembly you must specify a key to use. Refer to the 
